# pbm-audit-databricks

./: .gitignore  README.md  presentation.html  pyproject.toml  requirements.txt  whitepaper.docx
app/: main.py  styles.css
config/: benefit_design.json
data/: contract_summary.txt  member_eligibility.csv  ndc_reference.csv  pbm_claims.csv
data/audit_results/: audit_summary.json  flagged_claims.csv  rebate_reconciliation.csv
notebooks/: 01_data_generator.py  02_ai_contract_parser.py  03_pbm_audit_engine.py
pbm_audit/: __init__.py  assistant.py  engine.py  generator.py  parser.py
scripts/: run_all.py
tests/: test_engine.py  test_generator.py
