[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbm_audit"
version = "0.1.0"
description = "PBM Claims Audit platform with PySpark and Generative AI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark>=3.3.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "streamlit>=1.20.0",
    "plotly>=5.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
